--- a/examples/my_first_functions.ipynb
+++ b/examples/my_first_functions.ipynb
@@ -5,37 +5,60 @@
    "id": "c5d9492f-fa23-4c5c-80b6-6668d6af0d13",
    "metadata": {},
    "source": [
-    "## My first Python Functions"
+    "## My first Python Functions (modified 4/8)\n",
+    "\n",
+    "added a few doctring examples \"\"\" docstring \"\"\"\n",
+    "\n",
+    "and some \"magic\" commands such as %%writefile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb2bdb36-f9f1-4a5f-a6c4-44d3d75eb0b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Vivian\"\n",
+    "%%writefile my_first_functions1.py\n",
+    "\n",
     "def the_weather():\n",
+    "    \"\"\"example with name defined non-local\"\"\"\n",
     "    print(\"Good morning \" + name)\n",
-    "    print(\"It's gonna be a hot one\")"
+    "    print(\"It's gonna be a hot one\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "fb72494f-c669-48b8-92d2-93d83cc6c717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Vivian\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f59f90ca-1b48-4559-82b6-9d8924b21d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## later you can %run my_first_functions1.py\n",
+    "## recall the -i uses input from the notebook\n",
+    "\n",
+    "%run -i my_first_functions1.py\n",
+    "\n",
+    "## also\n",
+    "## %run my_first_functions1.py \"Vivian\"`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "603bd7df-21f2-4eec-9d03-34383103ec20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning Vivian\n",
-      "It's gonna be a hot one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_weather()"
    ]
@@ -50,12 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "cccb525f-5ad4-4075-ba9b-21b9ca011f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## BTW\n",
+    "%pycat my_first_functions1.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fed8f92-7abb-4fd8-922b-ac988e2f0a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load my_first_functions1.py\n",
+    "\n",
+    "def the_weather():\n",
+    "    \"\"\"example with name defined non-local\"\"\"\n",
+    "    print(\"Good morning \" + name)\n",
+    "    print(\"It's gonna be a hot one\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1837383a-3a65-4d52-ae9f-c97e335d4cbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def the_weather2():\n",
+    "    \"\"\"example with name defined locally\"\"\"\n",
     "    name = \"Vivian Lew\"  \n",
     "    print(\"Good morning \" + name)\n",
     "    print(\"It's gonna be a hot one\")"
@@ -63,37 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de672c50-ce28-470b-a922-299deff7664a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning Vivian Lew\n",
-      "It's gonna be a hot one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_weather2()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4f4ab2ab-5e24-43f0-bb66-5ece13102221",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vivian\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(name) # which one and why?"
    ]
@@ -108,69 +141,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92c984d4-4f23-45bd-8d5e-093145e36154",
    "metadata": {},
    "outputs": [],
    "source": [
     "def the_weather3(name):\n",
+    "    \"\"\"example with name as parameter\"\"\"\n",
     "    print(\"Good morning \" + name)\n",
     "    print(\"It's gonna be a hot one\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "81008d58-6dee-4d7c-8ba8-8d74210ebe2f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning Vivian Lew\n",
-      "It's gonna be a hot one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_weather3(\"Vivian Lew\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2179eb7d-4d8b-4c85-ba48-202053127544",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning UCLA\n",
-      "It's gonna be a hot one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_weather3(\"UCLA\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4b7ce114-1ea0-4900-bcef-8f350b2cdfad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning everybody\n",
-      "It's gonna be a hot one\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_weather3(\"everybody\")"
    ]
@@ -193,30 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c6566b60-d2f5-4408-b700-5aab437989ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "def tell_time(minutes):\n",
+    "    \"\"\"example with return value\"\"\"\n",
     "    estimate = str(minutes) +  \" minutes left in class\"\n",
     "    return estimate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "89f19ec4-4a67-44ee-916b-45e42cde4c3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15 minutes left in class\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(tell_time(15))"
    ]
