--- a/examples/my_first_functions.ipynb
+++ b/examples/my_first_functions.ipynb
@@ -5,19 +5,23 @@
    "id": "c5d9492f-fa23-4c5c-80b6-6668d6af0d13",
    "metadata": {},
    "source": [
-    "## My first Python Functions (modified 4/8)\n",
-    "\n",
-    "added a few doctring examples \"\"\" docstring \"\"\"\n",
-    "\n",
-    "and some \"magic\" commands such as %%writefile"
+    "## My first Python Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb2bdb36-f9f1-4a5f-a6c4-44d3d75eb0b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting my_first_functions1.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile my_first_functions1.py\n",
     "\n",
@@ -29,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb72494f-c669-48b8-92d2-93d83cc6c717",
    "metadata": {},
    "outputs": [],
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f59f90ca-1b48-4559-82b6-9d8924b21d5b",
    "metadata": {},
    "outputs": [],
@@ -55,10 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "603bd7df-21f2-4eec-9d03-34383103ec20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning Vivian\n",
+      "It's gonna be a hot one\n"
+     ]
+    }
+   ],
    "source": [
     "the_weather()"
    ]
@@ -73,10 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cccb525f-5ad4-4075-ba9b-21b9ca011f57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;32mdef\u001b[0m \u001b[0mthe_weather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0;34m\"\"\"example with name defined non-local\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Good morning \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"It's gonna be a hot one\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## BTW\n",
     "%pycat my_first_functions1.py"
@@ -84,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3fed8f92-7abb-4fd8-922b-ac988e2f0a92",
    "metadata": {},
    "outputs": [],
@@ -99,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1837383a-3a65-4d52-ae9f-c97e335d4cbf",
    "metadata": {},
    "outputs": [],
@@ -113,20 +140,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "de672c50-ce28-470b-a922-299deff7664a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning Vivian Lew\n",
+      "It's gonna be a hot one\n"
+     ]
+    }
+   ],
    "source": [
     "the_weather2()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4f4ab2ab-5e24-43f0-bb66-5ece13102221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vivian\n"
+     ]
+    }
+   ],
    "source": [
     "print(name) # which one and why?"
    ]
@@ -141,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "92c984d4-4f23-45bd-8d5e-093145e36154",
    "metadata": {},
    "outputs": [],
@@ -154,30 +198,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "81008d58-6dee-4d7c-8ba8-8d74210ebe2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning Vivian Lew\n",
+      "It's gonna be a hot one\n"
+     ]
+    }
+   ],
    "source": [
     "the_weather3(\"Vivian Lew\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2179eb7d-4d8b-4c85-ba48-202053127544",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning UCLA\n",
+      "It's gonna be a hot one\n"
+     ]
+    }
+   ],
    "source": [
     "the_weather3(\"UCLA\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4b7ce114-1ea0-4900-bcef-8f350b2cdfad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning everybody\n",
+      "It's gonna be a hot one\n"
+     ]
+    }
+   ],
    "source": [
     "the_weather3(\"everybody\")"
    ]
@@ -200,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c6566b60-d2f5-4408-b700-5aab437989ae",
    "metadata": {},
    "outputs": [],
@@ -213,10 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "89f19ec4-4a67-44ee-916b-45e42cde4c3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 minutes left in class\n"
+     ]
+    }
+   ],
    "source": [
     "print(tell_time(15))"
    ]
